adição de informações na aba 'sobre nós'

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h1 class="section_title">Sobre o App</h1>
                         <div id="como_surgiu">
                             <div class="section_subtitle_div">
-                                <h2 class="section_subtitle">Surgmento e Objetivo</h2>
+                                <h2 class="section_subtitle">Surgimento e Objetivo</h2>
                                 <img class="subtitle_icon"src="assets/images/lampada-de-ideia.png" alt="Lâmpada">
                             </div>
                             <div id="info_div1">
@@ -79,12 +79,12 @@
                                 <div class="card">
                                     <img class="card_image" src="assets/images/calculadora.png" alt="Calculadora de resistores">
                                     <h3 class="card_title"></h3>
-                                    <p class="card_paragraph">Calculadora on-line que faça o cálculo de OHMS, a partir das cores dos resistores</p>
+                                    <p class="card_paragraph">Calculadora que faz o cálculo da resistência em OHMS, a partir das cores dos resistores.</p>
                                 </div>
                                 <div class="card">
                                     <img class="card_image" src="assets/images/circuitos.png" alt="Circuitos elétrico">
                                     <h3 class="card_title"></h3>
-                                    <p class="card_paragraph">Aulas sobre o tema elementar de Eletrônica: "Circuitos Elétricos"</p>
+                                    <p class="card_paragraph">Aulas sobre o tema elementar da Eletrônica: "Circuitos Elétricos"</p>
                                 </div>
                                 <div class="card">
                                     <img class="card_image" src="assets/images/dicionario.png" alt="Dicionário Visual">
@@ -121,10 +121,33 @@
             <div class="container developers_section_div">
                 <h1 class="section_title">Quem somos?</h1>
                 <p class="text_paragraph">O Eletro Libras é a síntese do talento, dedicação e colaboração entre quatro mulheres notáveis. Conheça as forças que moldaram esse projeto extraordinário: Patrícia, professora orientadora do projeto, e as alunas Cilene, Danielle e Jennifer.</p>
-                <div class="cards_developers_container">
+                <div class="cards_developers_container" id="patricia">
                     <div class="card_developer">
-                        <div class="developer_image">
-                            <img class='person_photo hide' src="assets/images/danielle.jpeg" alt="Foto da Danielle">
+                        <div class="developer_image" id="patricia_photo">
+                        </div>
+                        <div class="name">Patricia Santiago</div>
+                        <div class="about_person text_">Professora de Língua Inglesa da carreira do Ensino Básico Técnico e Tecnológico desde 2008, mestra em Educação Social e Intervenção Comunitária, pesquisadora e orientadora de projetos na área de Educação Inclusiva e Tecnologia Assistiva. “Sou apaixonada pelo que faço e sempre me dedico para fazer o meu melhor!”</div>
+                    </div>
+                </div>
+                <div class="cards_developers_container" id="cilene">
+                    <div class="card_developer">
+                        <div class="developer_image" id="cilene_photo">
+                        </div>
+                        <div class="name">Cilene Trajano</div>
+                        <div class="about_person text_">"Meu nome é Cilene, tenho 19 anos e sou estudante de publicidade e propaganda. Desde pequena gosto de criar e produzir conteúdos para a rede social. A minha participação na criação e desenvolvimento do Eletro Libras, me motivou para o meu atual curso isso porquê, envolve ideias, planejamento, estratégias e inovação, e contudo me guiou a área de comunicação. Além disso, gosto de escutar música, cozinhar e treinar."</div>
+                    </div>
+                </div>
+                <div class="cards_developers_container" id="danielle">
+                    <div class="card_developer">
+                        <div class="developer_image" id="danielle_photo">
+                        </div>
+                        <div class="name">Danielle Soares</div>
+                        <div class="about_person text_">"Mais conhecida como Dani, tenho 18 anos e sou estudante de Engenharia de Software na Universidade de Brasília (UnB). Minha paixão por tecnologias começou desde cedo, e com toda certeza o Eletro Libras aguçou ainda mais a minha curiosidade na área. Para além de uma estudante assídua, no meu tempo livre gosto muito de apreciar música, assistir séries e ir para a academia 😊"</div>
+                    </div>
+                </div>
+                <div class="cards_developers_containe hide" id="jennifer">
+                    <div class="card_developer">
+                        <div class="developer_image" id="jennifer_photo">
                         </div>
                         <div class="name">Danielle Soares</div>
                         <div class="about_person text_">"Mais conhecida como Dani, tenho 18 anos e sou estudante de Engenharia de Software na Universidade de Brasília (UnB). Minha paixão por tecnologias começou desde cedo, e com toda certeza o Eletro Libras aguçou mais ainda a minha curiosidade na área. Para além de uma estudante assídua, no meu tempo livre gosto muito de apreciar música, assistir séries e ir para a academia 😊"</div>
