corrigindo bugs na aba 'quem somos'

--- a/index.html
+++ b/index.html
@@ -128,25 +128,19 @@
                         <div class="name">Patricia Santiago</div>
                         <div class="about_person text_">Professora de Língua Inglesa da carreira do Ensino Básico Técnico e Tecnológico desde 2008, mestra em Educação Social e Intervenção Comunitária, pesquisadora e orientadora de projetos na área de Educação Inclusiva e Tecnologia Assistiva. “Sou apaixonada pelo que faço e sempre me dedico para fazer o meu melhor!”</div>
                     </div>
-                </div>
-                <div class="cards_developers_container" id="cilene">
                     <div class="card_developer">
                         <div class="developer_image" id="cilene_photo">
                         </div>
                         <div class="name">Cilene Trajano</div>
                         <div class="about_person text_">"Meu nome é Cilene, tenho 19 anos e sou estudante de publicidade e propaganda. Desde pequena gosto de criar e produzir conteúdos para a rede social. A minha participação na criação e desenvolvimento do Eletro Libras, me motivou para o meu atual curso isso porquê, envolve ideias, planejamento, estratégias e inovação, e contudo me guiou a área de comunicação. Além disso, gosto de escutar música, cozinhar e treinar."</div>
                     </div>
-                </div>
-                <div class="cards_developers_container" id="danielle">
                     <div class="card_developer">
                         <div class="developer_image" id="danielle_photo">
                         </div>
                         <div class="name">Danielle Soares</div>
                         <div class="about_person text_">"Mais conhecida como Dani, tenho 18 anos e sou estudante de Engenharia de Software na Universidade de Brasília (UnB). Minha paixão por tecnologias começou desde cedo, e com toda certeza o Eletro Libras aguçou ainda mais a minha curiosidade na área. Para além de uma estudante assídua, no meu tempo livre gosto muito de apreciar música, assistir séries e ir para a academia 😊"</div>
                     </div>
-                </div>
-                <div class="cards_developers_containe hide" id="jennifer">
-                    <div class="card_developer">
+                    <div class="card_developer hide">
                         <div class="developer_image" id="jennifer_photo">
                         </div>
                         <div class="name">Danielle Soares</div>
