--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                         <div class="name">Danielle Soares</div>
                         <div class="about_person text_">"Mais conhecida como Dani, tenho 18 anos e sou estudante de Engenharia de Software na Universidade de Brasília (UnB). Minha paixão por tecnologias começou desde cedo, e com toda certeza o Eletro Libras aguçou ainda mais a minha curiosidade na área. Para além de uma estudante assídua, no meu tempo livre gosto muito de apreciar música, assistir séries e ir para a academia 😊"</div>
                     </div>
-                    <div class="card_developer hide">
+                    <div class="card_developer">
                         <div class="developer_image" id="jennifer_photo">
                         </div>
-                        <div class="name">Danielle Soares</div>
-                        <div class="about_person text_">"Mais conhecida como Dani, tenho 18 anos e sou estudante de Engenharia de Software na Universidade de Brasília (UnB). Minha paixão por tecnologias começou desde cedo, e com toda certeza o Eletro Libras aguçou mais ainda a minha curiosidade na área. Para além de uma estudante assídua, no meu tempo livre gosto muito de apreciar música, assistir séries e ir para a academia 😊"</div>
+                        <div class="name">Jennifer Estácio</div>
+                        <div class="about_person text_">"Meu nome é Jennifer, tenho 18 anos, sou técnica em Informática e faço Ciência da Computação na faculdade IESB, costumo dizer que foi a área da tecnologia que me escolheu e não ao contrário. Como uma das desenvolvedoras do EletroLibras tenho a dizer que a ideia e a intenção da criação desse aplicativo é fantástica, pois, com ele podemos proporcionar e contribuir para que dezenas de pessoas possam descobrir um novo mundo através de uma tela. Já em minhas horas livres, gosto de ler, apreciar a natureza e tirar fotos"</div>
                     </div>
                 </div>
             </div>
